# aoc25

./: Cargo.toml
benches/: bench.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  lib.rs  main.rs  utils.rs
